Fixed overflowX hidden, for iphone

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   user-select: none;
 }
 
+html,
 body {
   box-sizing: border-box;
   margin: 0;
